# sf-news

./: .gitattributes  .gitignore  .pytest.ini  CLAUDE.md  buglist.md  check_dupes.py  fetch.bat  pyproject.toml  readme.md  requirements.txt  start.bat  test_api.py  test_fetcher.py  test_fetcher_detailed.py  test_fetcher_simple.py  test_parser.py  test_search.py  test_step_by_step.py  todos.md
.claude/: settings.local.json
.github/workflows/: crawler.yml
.ralph/: @AGENT.md  @fix_plan.md  PROMPT.md
.ralph/specs/: news_crawler.md  storage.md  web_api.md
.specify/ideas/: README.md  idea-template.md  index.md  奇点研究员.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
config/: company.yaml  crawler_config.yaml  legend.yaml  news_keywords.yaml  news_sources.yaml  nova.yaml  readme.md  research_config.yaml
config/research/: company_query.yaml  people_query.yaml  product_query.yaml
data/db/: scheduler.sqlite  timeline_2026-01-28.sqlite  (+3 more)
design/: README.md  index-5color.html  index-news.html  奇点前沿首页 - 设计系统方案.md  界面设计.md
docs/: api.md  design.md  development_plan.md  frontend_architecture.md  index.html  tech_stack.md  testing.md  需求.md
src/: __init__.py  crawl_cli.py  generate_static.py  main.py
src/api/: admin.py  (+3 more)
templates/: index.html  static_index.html
tests/: conftest.py  test_bytedance_research.py  test_config.py  test_crawlers.py  test_legend_api.py  test_legend_db.py  test_legend_file.py  test_legend_models.py  test_legend_sync.py  test_new_features.py  test_scheduler.py  test_storage.py
(+94 files in other folders)
